# spike_lab

./: CMakeLists.txt  CMakePresets.json  README.md
33_bogatyr/: 33_bogatyr.c  33_bogatyr_threads.c
workers_details/: workers_details.cpp
